--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Mifare DESFire EV3 Tutorial</string>
+    <string name="app_name">Mifare DESFire Change Master App Key</string>
 </resources>
